# Mouse-on-Numpad

./: .gitignore  AnalyticsSystem.ahk  AutoFix.ahk  CHANGELOG.md  CloudSyncManager.ahk  ColorHelpers.ahk  ColorThemeManager.ahk  Config.ahk  ErrorLogger.ahk  FILE_STRUCTURE.md  HotkeyManager..old.ahk  HotkeyManager.ahk  IMPROVEMENTS.md  LICENSE  LINUX_PORT_PLAN.md  Main.ahk  Modular Research.md  MonitorUtils.ahk  Mouse on Numpad.ahk  MouseActions.ahk  MouseNumpadConfig.ini  New Stuff V3.0.0.md  PerformanceMonitor.ahk  PositionMemory.ahk  README.md  SECURITY.md  SettingsGUI.ahk  StateManager.ahk  StatusIndicator.ahk  Test Script.ahk  TooltipSystem.ahk  pyproject.toml
.claude/: metadata.json
GUI/: SettingsActionHandlers.ahk  SettingsActions.ahk  SettingsDarkMode.ahk  SettingsGUI.ahk  SettingsGUI_Base.ahk  SettingsGUI_TabManager.ahk  SettingsHelper.ahk  SettingsListPopulators.ahk  SettingsTabs.ahk
Tests/: ArrayHelpers.ahk  RunSingleTest.ahk  TestConfig.ahk  TestFramework.ahk  TestRunner.ahk
docs/: API.md  HOTKEYS.md  INDEX.md  PYTHON_API.md  README.md  ROADMAP_SettingsGUI.md  SETTINGS_GUI.md  THEMING.md  USAGE.md  code-standards.md  codebase-summary.md  installation.md  project-overview-pdr.md  system-architecture.md
old/: SettingsGUI.ahk
packaging/: PKGBUILD  README.md  com.github.mouse-on-numpad.policy  install.sh  mouse-on-numpad.desktop  mouse-on-numpad.service
tests/: __init__.py  test_audio_feedback.py  test_backends.py  test_config.py  test_daemon_coordinator.py  test_error_logger.py  test_gui_components.py  test_hotkey_dispatcher.py  test_hotkey_manager.py  test_monitor_manager.py  test_mouse_controller.py  test_movement_controller_full.py  test_position_memory.py  test_profiles_integration.py  test_scroll_controller.py  test_state_manager.py
(+112 files in other folders)
